[FIX] the memory game glitch on firefox

--- a/Frontend_Experimental/memory_game.css
+++ b/Frontend_Experimental/memory_game.css
@@ -56,5 +56,5 @@
   opacity: 1; /* testing pursopse */
   transition: 0.25s;
   transform: rotateY(0deg);
-  backface-visibility: hidden;
+  /* backface-visibility: hidden;*/ /* not working on firefox */
 }
